plugins {
    id 'java-library'
    id 'maven-publish'
}

ext {
    tinyLogVersion  = '2.7.0'
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    api 'net.openhft:chronicle-map:3.26ea3'
    api 'com.jsoniter:jsoniter:0.9.23'
    api 'org.mapdb:mapdb:3.1.0'
    api "org.tinylog:tinylog-impl:$tinyLogVersion"
    api "org.tinylog:tinylog-api:$tinyLogVersion"
    runtimeOnly "org.tinylog:slf4j-tinylog:$tinyLogVersion"
    testImplementation 'org.apache.logging.log4j:log4j-1.2-api:2.23.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.3'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
}

group = 'chronicle.db'
version = '0.0.1-RELEASE'
description = 'chronicle-db'
java.sourceCompatibility = JavaVersion.VERSION_21

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

task copyDependencies(type: Copy) {
    from(configurations.runtimeClasspath)
    into("build/libs")
}

build.dependsOn(copyDependencies)

jar {
    processResources.exclude('*')
}